# zinc

./: .dockerignore  .gitignore  .goreleaser.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  VERSIONING.md  build.zig  build.zig.zon  classes.go  classes.py  closures.go  closures.py  collections.py  concurrency.go  constants.py  data_processing.py  defaults_and_named_args.py  enums.go  enums.py  error_handling.py  fibonacci.go  generators.py  generics.go  go.mod  go.sum  go.work  hello.go  hello.py  install.sh  polars_pipeline.py  test_chained_cmp.py  test_raise.py  test_v2.py  type_checking.py  variadic.py  zinc.py
zinc-go-py/: .gitignore  Makefile  README.md  pyproject.toml  run_e2e.sh  run_sel.sh  run_unit.sh
zinc-go-py/examples/: channels.zn  collection_types.zn  (+19 more)
zinc-go-py/examples-fail/: fn_keyword_removed.zn  var_type_hybrid.zn
zinc-go-py/examples-unit/: i_class_const.zn  i_generic_data_nested.zn  i_generic_empty_init.zn  i_generic_fn_user_class.zn  i_hof_lambda.zn  i_inherit_method.zn  i_list_of_class.zn  i_map_iter.zn  i_match_expr_wildcard.zn  i_sealed_fn_return.zn  i_struct_literal_import.zn  i_super_ctor.zn  u_bit.zn  u_break.zn  u_builtin_add.zn  u_builtin_len.zn  u_builtin_string.zn  u_cast_long.zn  u_cast_str.zn  u_class_bare_field.zn  u_class_ctor.zn  u_class_field.zn  u_class_method.zn  u_cmp.zn  u_const.zn  u_continue.zn  u_data_flat.zn  u_fn_args.zn  u_fn_default.zn  u_fn_noargs.zn  u_fn_single_expr.zn  u_fn_variadic.zn  u_for_c.zn  u_for_range.zn  u_if.zn  u_if_elif.zn  u_if_else.zn  u_import_alias.zn  u_import_basic.zn  u_interp.zn  (+11 more)
(+1041 files in other folders)
