[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zinc"
version = "0.1.0"
description = "Zinc → Go transpiler (Python implementation)"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
]

[project.scripts]
zinc = "zinc.cli:main"

[tool.setuptools.packages.find]
include = ["zinc*"]

[tool.setuptools.package-data]
zinc = ["grammar.lark"]
